--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "latest",
     "next-sanity": "^1.0.9",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
